prevent page quote on website from covering menu button

--- a/doc/html/style.css
+++ b/doc/html/style.css
@@ -269,6 +269,7 @@ div.pagequote {
     top: 0;
     right: 0;
     padding: 10px 10px 0 0;
+    margin-left: 6em;
     text-align: right;
     font-size: 80%;
     color: #990000;
